@@ -30,40 +30,26 @@ dependencies {
     annotationProcessor 'org.derive4j:derive4j'
 }
 
-def exports = [
-        'jdk.compiler/com.sun.tools.javac.file',
-        'jdk.compiler/com.sun.tools.javac.main',
-        'jdk.compiler/com.sun.tools.javac.parser',
-        'jdk.compiler/com.sun.tools.javac.tree',
-        'jdk.compiler/com.sun.tools.javac.util',
-        'jdk.compiler/com.sun.tools.javac.code',
-        'jdk.compiler/com.sun.tools.javac.api'
-]
-
-def jvmArgList = exports.collect { value -> "--add-exports=${value}=ALL-UNNAMED".toString() }
+moduleJvmArgs {
+    exports().addAll(
+            'jdk.compiler/com.sun.tools.javac.file',
+            'jdk.compiler/com.sun.tools.javac.main',
+            'jdk.compiler/com.sun.tools.javac.parser',
+            'jdk.compiler/com.sun.tools.javac.tree',
+            'jdk.compiler/com.sun.tools.javac.util',
+            'jdk.compiler/com.sun.tools.javac.code',
+            'jdk.compiler/com.sun.tools.javac.api')
+}
 
 tasks.withType(JavaCompile).configureEach {
     options.errorprone.disable 'StrictUnusedVariable'
 
-    // Allow access to internal javac apis
-    options.compilerArgs += jvmArgList
-
-    if (JavaVersion.current() < JavaVersion.VERSION_14) {
-        excludes = ['**/Java14InputAstVisitor.java']
-    }
-}
-
-tasks.withType(Test).configureEach {
-    jvmArgs = jvmArgList
+    sourceCompatibility = JavaVersion.VERSION_11
+    targetCompatibility = JavaVersion.VERSION_11
 }
 
 tasks.withType(Javadoc).configureEach {
-    // Allow access to internal javac apis
-    options.optionFiles << file('../gradle/javadoc.options')
-
-    if (JavaVersion.current() < JavaVersion.VERSION_14) {
-        exclude '**/Java14InputAstVisitor.java'
-    }
+    enabled = false
 }
 
 // false positives due to org.junit.runners.* in the test cases
@@ -75,17 +61,4 @@ tasks.named("test") {
     // Run all classes and tests in parallel
     // https://junit.org/junit5/docs/current/user-guide/#writing-tests-parallel-execution
     systemProperty 'junit.jupiter.execution.parallel.mode.default', 'concurrent'
-}
-
-// necessary to compile Java14InputAstVisitor
-idea {
-    module.languageLevel = new org.gradle.plugins.ide.idea.model.IdeaLanguageLevel(14)
-}
-
-// This block may be replaced by BaselineExportsExtension exports
-// once https://github.com/gradle/gradle/issues/18824 is resolved.
-tasks.named("jar", Jar) {
-    manifest {
-        attributes('Add-Exports': exports.join(' '))
-    }
 }
